# project-zomboid-modid

./: .gitignore  .woodpecker.yml  README.md  pyproject.toml  pz_mod_manager.spec
.github/workflows/: release.yml
aur/: .SRCINFO  PKGBUILD  pz-mod-manager.desktop
scripts/: build_nuitka.bat  build_nuitka.sh
src/pz_mod_manager/: __main__.py  app.py
src/pz_mod_manager/models/: mod.py  mod_list_model.py
src/pz_mod_manager/resources/: style.qss
src/pz_mod_manager/services/: ini_service.py  settings_service.py  steam_api_service.py  workshop_scanner.py
src/pz_mod_manager/utils/: constants.py  url_parser.py
src/pz_mod_manager/views/: add_mod_dialog.py  main_window.py  search_workshop_dialog.py  server_settings_dialog.py  settings_dialog.py
tests/: test_ini_service.py  test_mod.py  test_steam_api_service.py  test_url_parser.py  test_workshop_scanner.py
tests/fixtures/: sample_servertest.ini
