[project]
name = "pz-mod-manager"
dynamic = ["version"]
description = "A desktop application for managing Project Zomboid server mod IDs"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.6,<7",
    "requests>=2.31,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-qt>=4.2",
    "pytest-mock>=3.12",
]
build = [
    "pyinstaller>=6.0",
    "nuitka>=2.0",
]

[project.scripts]
pz-mod-manager = "pz_mod_manager.app:main"

[build-system]
requires = ["setuptools>=68", "setuptools-scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pz_mod_manager = ["resources/*"]

[tool.setuptools_scm]
version_file = "src/pz_mod_manager/_version.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
